Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mpcpy : ">
+    <meta name="description" content="mpcpy : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Mpcpy</title>
+    <title>mpcpy</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/BrechtBa/mpcpy">View on GitHub</a>
 
-          <h1 id="project_title">Mpcpy</h1>
+          <h1 id="project_title">mpcpy</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -89,7 +89,7 @@ if we have a dymola model opend and compyled with dympy with 3 inputs "T_amb","Q
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Mpcpy maintained by <a href="https://github.com/BrechtBa">BrechtBa</a></p>
+        <p class="copyright">mpcpy maintained by <a href="https://github.com/BrechtBa">BrechtBa</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
