--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="mpcpy" class="anchor" href="#mpcpy" aria-hidden="true"><span class="octicon octicon-link"></span></a>mpcpy</h1>
+        <h2>
+<a id="mpcpy" class="anchor" href="#mpcpy" aria-hidden="true"><span class="octicon octicon-link"></span></a>mpcpy</h2>
 
 <p>A group of classes to run model predictive control (MPC) simulations using python and Dymola.</p>
 
-<h2>
-<a id="workflow" class="anchor" href="#workflow" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workflow</h2>
+<h1>
+<a id="workflow" class="anchor" href="#workflow" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workflow</h1>
 
 <p>In a model predictive control simulation we need several components.
 At first we need an emulator to replace the real world system in our computational environment.
@@ -48,38 +48,281 @@ As we are considering MPC the controller will consist of a state estimation, a p
 <p>For each of these components base classes are included in mpcpy.
 Some of these classes can be used out off the box, others require child class creation which will be explained below.</p>
 
-<p>before we start import the package</p>
+<p>before we start import the package and numpy</p>
 
-<pre><code>import mpcpy.Emulator 
+<pre><code>import numpy as np
+import mpcpy
 </code></pre>
 
-<h3>
-<a id="emulator" class="anchor" href="#emulator" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emulator</h3>
+<h2>
+<a id="boundary-conditions" class="anchor" href="#boundary-conditions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Boundary conditions</h2>
 
-<p>The most important method in the emulator class it the <strong>call</strong> method.
-This method should have the inputs to the emulator as arguments and append the results to it's "res" property.
-By default a dympy Dympola connection is assumed to do the simulation work but the class can be adapted to use other simulation tools.</p>
+<p>As all systems are subject to some boundary conditions a Boundaryconditions class is constructed.
+This class main purpose is to handle the interpolation of boundary conditions to the correct times (also for predictions which may lay outside of the emulation interval).
+By default it assumes periodic boundary conditions but this can be altered to maintaining the first or last entry when time flows outside of the defined range by setting <code>periodic=False</code> as an argument on creation.</p>
 
-<p>i.e.
-if we have a dymola model opend and compyled with dympy with 3 inputs "T_amb","Q_flow_sol","Q_flow_hp" you can create an emulator object like this:</p>
+<h4>
+<a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example:</h4>
+
+<pre><code>time = np.arange(0.,24.01*3600.,3600.)
+bcs = {'time': time,
+       'T_amb': 5 + 2*np.sin(2*np.pi*time/24./3600.)+273.15,
+       'Q_flow_sol': 500 + 500*np.sin(2*np.pi*time/24./3600.),
+       'p_el': 0.2 + 0.05*np.sin(2*np.pi*time/24./3600.),
+       'Q_flow_hp_max': 5000*np.ones_like(time),
+       'T_in_min': 20*np.ones_like(time)+273.15,
+       'T_em_max': 30*np.ones_like(time)+273.15}
+boundaryconditions = mpcpy.Boundaryconditions(bcs)
+print( boundaryconditions(1800) )
+print( boundaryconditions(24.5*3600) )
+</code></pre>
+
+<h2>
+<a id="emulator" class="anchor" href="#emulator" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emulator</h2>
+
+<p>The emulator class creates objects used to emulate the system.
+By default a <a href="https://github.com/brechtba/dympy">dympy</a> Dymola connection is assumed to do the simulation work but the class can be adapted to use other simulation tools.
+When creating an object the inputs the model uses need to be specified as a list of strings. These inputs can be controlled inputs or disturbances.
+There is also an optional argument <code>initializationtime</code> which controls the time used for initializing the model the default value is 1 second.</p>
+
+<p>The object must have a <code>res</code> property where the results of the entire emulation are stored. This property is later used to output the results to the mpcpy object.</p>
+
+<p>Model parameters can be defined using the <code>set_parameters</code> method which accepts a dictionary with name, value pairs as argument. 
+Initial conditions can be defined using the <code>set_initial_conditions</code> method which accepts a dictionary with name, value pairs as argument.</p>
+
+<p>Each model must be initialized before a simulation or mpc run using the <code>initialize</code>.
+The initialization sets all parameter values and initial conditions and runs the simulation for a short period to get initial values for all variables in the <code>res</code> dictionary.
+This way rewriting all parameters before every emulation is avoided which results in considerable speed gains.</p>
+
+<p>The most important method in the emulator class it the <code>__call__</code> method.
+This method should accepts an input dictionary with inputs to the emulator as only argument and append the results to it's <code>res</code> property.</p>
+
+<h4>
+<a id="example-1" class="anchor" href="#example-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example:</h4>
+
+<p>First we need to open and compile a dymola model:</p>
+
+<pre><code>import dympy
+
+dymola = dympy.Dymola()
+dymola.clear()
+dymola.openModel('example.mo')
+dymola.compile('example')
+</code></pre>
+
+<p>if we have a dymola model opened and compiled with dympy as <code>dymola</code> with 3 inputs <code>T_amb</code>, <code>Q_flow_sol</code>, <code>Q_flow_hp</code> and some parameters defined in Modelica which need to be set, 
+you can create and run an emulator object like this:</p>
 
 <pre><code>emulator = mpcpy.Emulator(dymola,['T_amb','Q_flow_sol','Q_flow_hp'])
+inp = {'time': [0., 3600., 7200.], 'T_amb': [273.15, 274.15, 275.15], 'Q_flow_sol': [500., 400., 300.], 'Q_flow_hp': [4000., 4000., 4000.]}
+emulator_parameters = {'C_em.C': 10e6, 'C_in.C': 5e6, 'UA_in_amb.G': 200, 'UA_em_in.G': 1600}
+emulator.set_parameters(emulator_parameters)
+
+emulator_initialconditions = {'C_em.T': 22+273.15, 'C_in.T': 21+273.15}
+emulator.set_initial_conditions(emulator_initialconditions)
+
+emulator.initialize()
+emulator(inp)
+
+print( emulator.res['time'] )
+print( emulator.res['C_in.T'] )
+</code></pre>
+
+<h2>
+<a id="control" class="anchor" href="#control" aria-hidden="true"><span class="octicon octicon-link"></span></a>Control</h2>
+
+<p>The control algorithm is MPC by default as this is the goal of the project, but it could be modified to use other control techniques at discrete time intervals.
+An MPC consists of a state estimation, a prediction and a control optimization which will be explained below.
+The basic principle of MPC is that a model suitable for optimization (for instance a linear or quadratic program or a smooth non-linear model) which represents the system behavior is constructed.
+Each time step the states of the optimization model are estimated based on measurements or the emulation model in our case.
+A prediction is made for the disturbances over a certain time period (the control horizon)
+The model is optimized with respect to the control signals given the predictions and certain constraints and the first sample of the control signals are implemented in the emulator.
+The system hopefully evolves in the desired direction and the next time step everything starts over.</p>
+
+<ul>
+<li>refs on mpc</li>
+</ul>
+
+<h3>
+<a id="state-estimation" class="anchor" href="#state-estimation" aria-hidden="true"><span class="octicon octicon-link"></span></a>State estimation</h3>
+
+<p>We start by defining a state estimation object. A base class is supplied in mpcpy but due to the specific nature of every model this has to be extended for every MPC.
+During creation the estimation object has to be given an emulator object which contains the results from which the states can be estimated.
+The implemented <code>__call__</code> method  take one argument, time and simply passes this to the <code>stateestimation</code> method and returns the result. 
+The intention is that the <code>stateestimation</code> method can be modified in a child class without affecting the overall object behavior and multiple state estimation object can be created and used.</p>
+
+<h4>
+<a id="example-2" class="anchor" href="#example-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example:</h4>
+
+<pre><code>class Stateestimation_perfect(mpcpy.Stateestimation):
+    # redefine the stateestimation method
+    def stateestimation(self,time):
+        state = {}
+        state['T_in'] = self.emulator.res['C_in.T'][-1]
+        state['T_em'] = self.emulator.res['C_em.T'][-1]
+        return state
+
+stateestimation = Stateestimation_perfect(emulator)
+print( stateestimation(0) )
 </code></pre>
 
 <h3>
-<a id="boundary-conditions" class="anchor" href="#boundary-conditions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Boundary conditions</h3>
+<a id="prediction" class="anchor" href="#prediction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prediction</h3>
 
-<h3>
-<a id="control" class="anchor" href="#control" aria-hidden="true"><span class="octicon octicon-link"></span></a>Control</h3>
+<p>The <code>prediction</code> class is used to generate predictions from the boundary conditions over a certain time period.
+On creation it takes a <code>boundaryconditions</code> object as argument.
+It follows the same structure as the <code>Stateestimation</code> class but is predefined with a perfect prediction method.
+This can of course be redefined to more realistic or stochastic prediction models.</p>
 
 <h4>
-<a id="state-estimation" class="anchor" href="#state-estimation" aria-hidden="true"><span class="octicon octicon-link"></span></a>State estimation</h4>
+<a id="example-3" class="anchor" href="#example-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example:</h4>
 
-<h4>
-<a id="prediction" class="anchor" href="#prediction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prediction</h4>
+<pre><code>prediction = mpcpy.Prediction(boundaryconditions)
+print( prediction([0.,1800.,3600.]) )
+</code></pre>
 
 <h3>
-<a id="mpc" class="anchor" href="#mpc" aria-hidden="true"><span class="octicon octicon-link"></span></a>MPC</h3>
+<a id="control-1" class="anchor" href="#control-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Control</h3>
+
+<p>The <code>Control</code> class combines state estimations and predictions and solves an optimal control problem.
+The class is built as a base class as the optimal control program will be different for every system.
+Upon initialization a <code>stateestimation</code> object, <code>prediction</code> object must be given. Several other arguments are optional.
+A <code>parameters=None</code> argument can be used to pass model parameters to the optimal control problem.
+The <code>horizon=24*3600.</code> argument determines how far the optimal control problem will look into the future.
+The <code>timestep=3600.</code> argument determines the discretization time step of the optimal control problem.
+The <code>receding=3600.</code> argument determines the time between two control optimizations</p>
+
+<p>A <code>time</code> method is implemented which creates a control time array for the next control optimization based on a <code>starttime</code> argument and the above mentioned times.
+The <code>__call__</code> method runs the state estimation, the predictions and tries to solve the optimal control problem.
+The solving of the optimal control problem is done by calling the solution property which must contain a function which solves the problem and returns a dictionary of control inputs.</p>
+
+<p>The solution function can be set by the <code>formulation</code> method.
+This is done to avoid redefining the problem on every control time step which could be very slow for large optimal control problems.
+In the base class the formulation method returns a blank solution function so this needs to be customized in a child class. </p>
+
+<p>In the example below IBM Cplex is used as the optimization solver. More information on Cplex can be found below.</p>
+
+<h4>
+<a id="example-4" class="anchor" href="#example-4" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example:</h4>
+
+<pre><code>import cplex
+class Linearprogram(mpcpy.Control):
+    def formulation(self):
+        # define temporary times, state estimations and prediction to use while defining the problem
+        time = self.time(0)
+        dt = time[1]-time[0]
+        N = len(time)
+        sta = self.stateestimation(time[0])
+        pre = self.prediction(time)
+        par = self.parameters
+
+        ocp = cplex.Cplex()
+
+        # shorthand for 1
+        ones = np.ones(N)
+
+        # add variables, don't wory about bounds yet as they will be set in the solution function
+        ocp.variables.add(obj = 0*ones, lb = 0*ones, ub = 1e6*ones, names = ['Q_flow_hp[%s]'%(i) for i in range(N)])
+        ocp.variables.add(obj = 0*ones, lb = 0*ones, ub = 1e6*ones, names = ['T_in[%s]'%(i) for i in range(N)])
+        ocp.variables.add(obj = 0*ones, lb = 0*ones, ub = 1e6*ones, names = ['T_em[%s]'%(i) for i in range(N)])
+
+        # add state constraints
+        for i in range(N-1):
+            # T_in
+            # C_in/dt*(T_in[i+1]-T_in[i]) = UA_in_amb*(T_amb[i]-T_in[i]) + UA_em_in*(T_em[i]-T_in[i]) + Q_flow_sol[i]
+            ocp.linear_constraints.add(
+                    lin_expr = [[['T_in[%s]'%(i)                                   , 'T_in[%s]'%(i+1) , 'T_em[%s]'%(i)    ],
+                                 [-par['C_in']/dt+par['UA_in_amb']+par['UA_em_in'] , par['C_in']/dt   , -par['UA_em_in']  ]]],
+                    senses = 'E',
+                    rhs = [par['UA_in_amb']*pre['T_amb'][i] + pre['Q_flow_sol'][i] ],
+                    names = ['state_T_in[%s]'%(i)])
+
+
+            # T_em
+            # C_em/dt*(T_em[i+1]-T_em[i]) = UA_em_in*(T_in[i]-T_em[i]) + Q_flow_hp[i]
+            ocp.linear_constraints.add(
+                    lin_expr = [[['T_em[%s]'%(i)                  , 'T_em[%s]'%(i+1) , 'T_in[%s]'%(i)    , 'Q_flow_hp[%s]'%(i) ],
+                                 [-par['C_em']/dt+par['UA_em_in'] ,  par['C_em']/dt  , -par['UA_em_in']  , -1                  ]]],
+                    senses = 'E',
+                    rhs = [0],
+                    names = ['state_T_em[%s]'%(i)])
+
+        # add initial values
+        ocp.linear_constraints.add(lin_expr = [[['T_in[0]',   ],
+                                                 [1]]],
+                                   senses = 'E',
+                                   rhs = [sta['T_in'].item()],
+                                   names = ['T_in_ini'])
+
+        ocp.linear_constraints.add(lin_expr = [[['T_em[0]',   ],
+                                                 [1]]],
+                                   senses = 'E',
+                                   rhs = [sta['T_em'].item()],
+                                   names = ['T_em_ini'])
+
+
+        # disable output printing
+        ocp.set_log_stream(None)
+        #ocp.set_error_stream(None)
+        ocp.set_warning_stream(None)
+        ocp.set_results_stream(None)
+
+        self.ocp = ocp
+
+        def solution(sta,pre):
+            # define the cost function
+            ocp.objective.set_linear( [('Q_flow_hp[%s]'%(i),par['COP']*pre['p_el'][i]/1000*dt/3600) for i in range(N)] )
+
+            # hard bounds
+            ocp.variables.set_lower_bounds( [('T_in[%s]'%(i)     ,pre['T_in_min'][i]) for i in range(N)])
+            ocp.variables.set_upper_bounds( [('Q_flow_hp[%s]'%(i),pre['Q_flow_hp_max'][i]) for i in range(N)]
+                                           +[('T_em[%s]'%(i)     ,pre['T_em_max'][i]) for i in range(N)])
+
+
+            # state constraints
+            ocp.linear_constraints.set_rhs( [('state_T_in[%s]'%(i),par['UA_in_amb']*pre['T_amb'][i] + pre['Q_flow_sol'][i]) for i in range(N-1)]
+                                           +[('state_T_em[%s]'%(i),0) for i in range(N-1)] )
+
+            # initial conditions
+            ocp.linear_constraints.set_rhs( [('T_in_ini',sta['T_in'].item())]
+                                           +[('T_em_ini',sta['T_em'].item())] )
+
+            # solve the optimal control problem
+            ocp.solve()
+
+            # add a properties with the ocp problem with the solution for inspection
+            self.ocp = ocp
+
+            # return the contol inputs
+            sol = {}
+            sol['time'] = pre['time']
+            sol['Q_flow_hp'] = ocp.solution.get_values(['Q_flow_hp[%s]'%(i) for i in range(N)])
+
+            return sol
+
+        return solution
+
+
+control_parameters = {'C_in': emulator_parameters['C_in.C'],
+                      'C_em': emulator_parameters['C_em.C'],
+                      'UA_in_amb': emulator_parameters['UA_in_amb.G'],
+                      'UA_em_in': emulator_parameters['UA_em_in.G'],
+                      'COP': 4}
+control = Linearprogram(stateestimation,prediction,parameters=control_parameters,horizon=24*3600.,timestep=3600.,receding=3600.)
+
+print( control.ocp.solution.get_status() )
+print( control(0) )
+</code></pre>
+
+<h2>
+<a id="mpc" class="anchor" href="#mpc" aria-hidden="true"><span class="octicon octicon-link"></span></a>MPC</h2>
+
+<p>Everything comes together in the <code>MPC</code> class. This creates a callable object which runs the MPC and returns a result dictionary from the emulator.</p>
+
+<pre><code>mpc = mpcpy.MPC(emulator,control,boundaryconditions,emulationtime=1*24*3600.,resulttimestep=600)
+res = mpc()
+print(res['Q_flow_hp'])
+</code></pre>
 
 <h1>
 <a id="cplex-in-python" class="anchor" href="#cplex-in-python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cplex in Python</h1>
