added conditional layout and menu fixing to top

--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
             </section>
         </header>
     </div>
-
+	
+	<div class="menu fixattop">
+		<a href="#mpcpy">mpcpy</a>
+		<a href="#cplex-in-python">cplex</a>
+	</div>
+	
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
-			<div class="menu">
-				<a href="#mpcpy">mpcpy</a>
-				<a href="#cplex-in-python">cplex</a>
-			</div>
+
 
 			<h1><a id="mpcpy" class="anchor" href="#mpcpy" aria-hidden="true"><span class="octicon octicon-link"></span></a>mpcpy</h1>
 			<p>A group of classes to run model predictive control (MPC) simulations using python and Dymola.</p>
