changed case in cplex type

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ par = {'COP': 4,
 			<li>
 			<code>ub</code>: list of floats, upper bounds of the variables, defaults to 1e20</li>
 			<li>
-			<code>type</code>: list of single character strings 'c','i','b' for continuous, integer, binary variables respectively?
+			<code>type</code>: list of single character strings 'C','I','B' for continuous, integer, binary variables respectively?
 			Cplex is suitable for solving Mixed Integer Programs.</li>
 			</ul>
 
